<resources>
    <string name="app_name">Bachelor Thesis Client</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_no_account">No account?</string>
    <string name="login_failed">"Login failed"</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="title_activity_home">Home</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_retype_password">Retype Password</string>
    <string name="action_have_an_account">Already have an account?</string>
    <string name="action_register">Sign up!</string>
    <string name="label_content">Content</string>
    <string name="checkbox_label_notify">Notify All</string>

    <!--    Menu Toolbar -->
    <string name="menu_item_settings_title">Settings</string>
    <string name="menu_item_warning_notification">Send Warning</string>
    <string name="menu_item_show_map">Show Map</string>

    <string name="title_activity_settings">Settings</string>
    <string name="cbx_label_receive_info">Receive info notifications</string>
    <string name="toolbar_settings_title">Settings</string>
    <string name="label_receive_info_notifications">Receive info notifications</string>
    <string name="label_settings_slider">Distance</string>
    <string name="menu_refresh">List Refresh</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="upload_images">Upload Images</string>
    <string name="publish_post">Publish post</string>
    <string name="preview">Preview</string>
    <string name="reserve_tickets">Reserve Tickets</string>
    <string name="make_reservation">Reserve</string>
    <string name="exceeded_number_of_reservation">You exceeded your limit for number of reservations</string>
    <string name="no_tickets_reserved">No tickets reserved</string>
    <string name="reserved_tickets">Reserved Tickets</string>
    <string name="sign_out">Sign out</string>
    <string name="ticket_cancel">Ticket cancel</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_profile">Profile</string>
    <string name="btn_settings_update">Update</string>
    <string name="content_descr_edit_feed">Edit feed</string>
    <string name="content_descr_delete_feed">Delete feed</string>
    <string name="show_feed_on_map">Show feed on map</string>

</resources>
