<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_show_tickets"
        android:icon="@drawable/icon_tickets"
        android:orderInCategory="100"
        android:title="@string/reserved_tickets"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_warning_notification"
        android:icon="@drawable/icon_warning"
        android:orderInCategory="100"
        android:title="@string/menu_item_warning_notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_show_map"
        android:icon="@drawable/icon_map"
        android:orderInCategory="100"
        android:title="@string/menu_item_show_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_show_settings"
        android:icon="@drawable/icon_settings"
        android:orderInCategory="100"
        android:title="@string/menu_item_settings_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_sign_out"
        android:icon="@drawable/icon_sign_out"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        app:showAsAction="ifRoom" />

</menu>