<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">
    <EditText
        android:id="@+id/et_login_email"
        style="@style/editText"
        android:layout_marginTop="160dp"
        android:autofillHints=""
        android:hint="@string/prompt_email"
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_login_password"
        style="@style/editText"
        android:layout_below="@id/et_login_email"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/button_sign_in"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_login_password"
        android:layout_marginTop="40dp"
        android:text="@string/action_sign_in_short" />

    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_sign_in"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="159dp"
        android:layout_marginRight="159dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/action_no_account"
        android:textColor="@color/darkBlueLink"/>

    <TextView
        android:id="@+id/tv_login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_no_account"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="159dp"
        android:layout_marginRight="159dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:visibility="invisible"
        android:text="@string/something_went_wrong"
        android:textColor="@color/design_default_color_error"/>

</RelativeLayout>