<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingHorizontal="6dp"
    tools:context=".ui.activity.UserTicketsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_ticket_edit_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:contentPadding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_label_purchase_tickets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reserve_tickets" />

            <LinearLayout
                android:id="@+id/ll_input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_label_purchase_tickets"
                android:layout_marginVertical="8dp"
                android:weightSum="7">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_num_of_tickets"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_reserve_tickets"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_num_of_tickets"
                    android:layout_weight="1"
                    android:text="@string/make_reservation" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_user_tickets_error_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_input_field"
                android:text="@string/exceeded_number_of_reservation"
                android:textColor="@color/error" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_tickets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cv_ticket_edit_field">

        <ListView
            android:id="@+id/ticket_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tv_no_tickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no_tickets_reserved"
        android:textColor="@color/info_label_color" />

</RelativeLayout>