<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_feed_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="My name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_name"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="10.07.2020. - 19:00"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/imgbtn_show_on_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    android:background="@drawable/icon_map_pin"
                    android:contentDescription="@string/show_feed_on_map"
                    android:visibility="visible" />

                <ImageButton
                    android:id="@+id/imgbtn_edit_feed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_edit"
                    android:contentDescription="@string/content_descr_edit_feed"
                    android:visibility="visible" />

                <ImageButton
                    android:id="@+id/imgbtn_remove_feed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    android:background="@drawable/icon_delete"
                    android:contentDescription="@string/content_descr_delete_feed"
                    android:visibility="visible" />
            </LinearLayout>

            <View
                android:id="@+id/divider"
                style="@style/divider"
                android:layout_below="@id/text_date"
                android:layout_marginTop="2dp" />

            <TextView
                android:id="@+id/text_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="Here should be post text"
                android:textSize="18sp" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_post">

                <LinearLayout
                    android:id="@+id/image_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>
            </HorizontalScrollView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>